# AIClasses

./: Arquitectures.py  Perceptrons.py  README.md  __init__.py  activations.py  classtools.py  functions.py  loss_func.py  pyproject.toml  requirements.txt  setup.py  test_model.py  testing.py
.github/workflows/: python-package.yml
Arquitectures/: Neuron.py  Perceptron.py
easyAI/: Arquitectures.py  __init__.py
easyAI/clsstools/: Verifiers.py
easyAI/core/: activations.py  loss_func.py  objects.py
examples/: logic_gates.py  logic_gates.py~  simple_mlp.py  xor_problem.py
scripts/: add_requirements.py  run_env.sh
src/easyAI/: Arquitectures.py  __init__.py  arquitectures.py  classtools.py  layers.py  test_model.py  test_perceptron.py
src/easyAI/configs/: default.py
src/easyAI/core/: activations.py  loss.py  loss_func.py  metrics.py  objects.py  optimizers.py
src/easyAI/datasets/: loaders.py
src/easyAI/models/: arquitectures.py
src/easyAI/utils/: instances.py
src/easyAI/visualization/: __init__.py
test/: test_perceptron.py
tests/Arquitectures/: test_mlp.py  test_perceptron.py  test_perceptron02.py
tests/Core/: test_layer.py  test_model.py
