[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "easyAI"
version = "0.0.1"
description = "A collection of tools for deep learning using Python"
authors = ["Uriel Rubio <privuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4.3"
random = ""
functools = ""

[tool.poetry.dev-dependencies]
pytest = "^6.2"

